--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
 
                 <div class="col-lg-6 col-12">
                   <input type="email" class="form-control" name="email" placeholder="Email" id="email" required>
+                  <input type="hidden" name="_next"  value="https://azizmzoughi.vercel.app/thankyou.html" required>
                 </div>
 
                 <div class="col-12">
