--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
               <div class="row">
                 <div class="col-lg-6 col-12">
                   <input type="text" class="form-control" name="name" placeholder="Your Name" id="name" required>
+                  <input type="hidden" name="_captcha" value="false">
                 </div>
 
                 <div class="col-lg-6 col-12">
@@ -307,6 +308,20 @@
       </div>
     </div>
   </footer>
+  <script type="text/javascript">
+    (function () {
+      var options = {
+        whatsapp: "+21625358656", // WhatsApp number
+        call_to_action: "Message us", // Call to action
+        position: "right", // Position may be 'right' or 'left'
+        pre_filled_message: "Thank you for your message! We will get back to yo", // WhatsApp pre-filled message
+      };
+      var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
+      var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
+      s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
+      var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
+    })();
+  </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
   <script src="js/jquery-3.3.1.min.js"></script>
