--- a/thankyou.html
+++ b/thankyou.html
@@ -4,6 +4,15 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="images/undraw/circle-xxl.ico">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/unicons.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    
+    <!-- MAIN STYLE -->
+    <link rel="stylesheet" href="css/tooplate-style.css">
+
     <title></title>
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400|Montserrat:700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -27,7 +36,7 @@
     </div>
 
     <footer class="site-footer" id="footer">
-        <button type="button" class="btn btn-success" onclick="location.href='index.html'">Go back </button>
+        <button type="button" class="form-control submit-btn" onclick="location.href='index.html'">Go back </button>
     </footer>
 </body>
 
