--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               and web development.</p>
 
             <div class="custom-btn-group mt-4">
-              <a href="images/undraw/aziz-mzoughi.pdf" target="_blank" class="btn mr-lg-2 custom-btn" download><i
+              <a href="images/undraw/aziz-mzoughi.pdf" target="_blank" class="btn mr-lg-2 custom-btn"><i
                   class='uil uil-file-alt'></i> Download Resume</a>
               <a href="#contact" class="btn custom-btn custom-btn-bg custom-btn-link">Get a free quote</a>
             </div>
