--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="css/unicons.css">
   <link rel="stylesheet" href="css/owl.carousel.min.css">
   <link rel="stylesheet" href="css/owl.theme.default.min.css">
+  <link rel="stylesheet" href="css/index.css">
 
   <!-- MAIN STYLE -->
   <link rel="stylesheet" href="css/tooplate-style.css">
@@ -157,13 +158,12 @@
           <div class="timeline">
             <div class="timeline-wrapper">
               <div class="timeline-yr">
-                <span>2021</span>
+                <span>2022</span>
               </div>
               <div class="timeline-info">
-                <h3><span>FullStack Web Developer</span><small>Ingressolive</small></h3>
-                <p>Proin ornare non purus ut rutrum. Nulla facilisi. Aliquam laoreet libero ac pharetra feugiat. Cras ac
-                  fermentum
-                  nunc, a faucibus nunc.</p>
+                <h3><span>FullStack Web Developer</span><small>Park Street</small></h3>
+                <p>Working as a Full Stack Web Developer for PS projects for direct client's
+                  stores or PS own projects such as Cockpit and Navigator. PHP/Laravel and Angular</p>
               </div>
             </div>
 
@@ -172,7 +172,20 @@
                 <span>2021</span>
               </div>
               <div class="timeline-info">
-                <h3><span>FullStack Developer Intern</span><small>Easyjur</small></h3>
+                <h3><span>FullStack Web Developer</span><small>Ingressolive</small></h3>
+                <p>Determined coding requirements for site creation, including e-
+                  commerce capability, security, and specialized scripts.
+                  Designed, implemented, and monitored web pages, plugins, and
+                  functionality for continuous improvement. | Laravel / React</p>
+              </div>
+            </div>
+
+            <div class="timeline-wrapper">
+              <div class="timeline-yr">
+                <span>2021</span>
+              </div>
+              <div class="timeline-info">
+                <h3><span>FullStack Developer</span><small>Easyjur</small></h3>
                 <p>Determined coding requirements for site creation, including e-commerce capability, security, and
                   specialized scripts.
                   PHP - AJAX / MYSQL / Google Cloud Platform
@@ -234,7 +247,7 @@
           <div class="w-100">
             <a href="https://api.whatsapp.com/send?phone=21625358656&text=Thank%20you%20for%20your%20message!%20We%20will%20get%20back%20to%20you%20within%2024%20hours.%20Kind%20regards,%20Aziz%20Mzoughi"
               target="_blank">
-              <img src="images/undraw/whatsapp.png" height="80" width="80" /><br>
+              <img class="whatsapp" src="images/undraw/whatsapp.png" height="80" width="80" /><br>
               <p></p>
               <p> Contact me on WhatsApp</p>
             </a>
@@ -296,8 +309,8 @@
         <div class="col-sm-12 col-md-3 item">
           <h3>Services</h3>
           <ul>
-            <li><a href="#project" style="color:black;">Web design</a></li>
-            <li><a href="#project" style="color:black;">Development</a></li>
+            <li><a href="#project" style="color:#00BFFF;">Web design</a></li>
+            <li><a href="#project" style="color:#00BFFF;">Development</a></li>
           </ul>
         </div>
         <div class="col-lg-3 item social">
