--- a/index.html
+++ b/index.html
@@ -150,16 +150,28 @@
   <!-- FEATURES -->
   <section class="resume py-5 d-lg-flex justify-content-center align-items-center" id="resume">
     <div class="container">
-      <div class="row">
-
-        <div class="col-lg-12 col-12">
-          <h2 class="mb-4">Experiences</h2>
-
+        <h2 class="mb-5 text-center">Experiences</h2>
+        <div class="d-flex justify-content-center">
           <div class="timeline">
+            <div class="timeline-wrapper">
+              <div class="timeline-yr">
+                <span>Today</span>
+              </div>
+            </div>
+            
             <div class="timeline-wrapper">
               <div class="timeline-yr">
                 <span>2022</span>
               </div>
+              <div class="timeline-info">
+                <h3><span>Frontend Engineer</span><small>Symplicity></h3>
+                <p>Working as a Front End Engineer II on Several projects for universities
+                   as Advocate, CSM, and participating in story creation / Angular 12+,
+                   TypeScript, Scss, HTML5, Gitlab.</p>
+              </div>
+            </div>
+            
+            <div class="timeline-wrapper">
               <div class="timeline-info">
                 <h3><span>FullStack Web Developer</span><small>Park Street</small></h3>
                 <p>Working as a Full Stack Web Developer for PS projects for direct client's
@@ -232,9 +244,6 @@
 
           </div>
         </div>
-
-
-      </div>
     </div>
   </section>
 
@@ -245,7 +254,7 @@
 
         <div class="col-lg-5 mr-lg-5 col-12">
           <div class="w-100">
-            <a href="https://api.whatsapp.com/send?phone=21625358656&text=Thank%20you%20for%20your%20message!%20We%20will%20get%20back%20to%20you%20within%2024%20hours.%20Kind%20regards,%20Aziz%20Mzoughi"
+            <a href="https://api.whatsapp.com/send?phone=5534997653456&text=Thank%20you%20for%20your%20message!%20We%20will%20get%20back%20to%20you%20within%2024%20hours.%20Kind%20regards,%20Aziz%20Mzoughi"
               target="_blank">
               <img class="whatsapp" src="images/undraw/whatsapp.png" height="80" width="80" /><br>
               <p></p>
@@ -255,8 +264,8 @@
           <br><br>
           <div class="contact-info d-flex justify-content-between align-items-center py-4 px-lg-5">
             <div class="contact-info-item">
-              <h3 class="mb-3 text-white">Contact</h3>
-              <p class="footer-text mb-0">+216 25 358 656</p>
+              <h3 class="mb-3 text-white">Let's talk</h3>
+              <p class="footer-text mb-0">+55 34 997653456</p>
               <p><a href="mailto:mzoughiaziz@techie.com">mzoughiaziz@techie.com</a></p>
             </div>
 
@@ -324,7 +333,7 @@
   <script type="text/javascript">
     (function () {
       var options = {
-        whatsapp: "+21625358656", // WhatsApp number
+        whatsapp: "+5534997653456", // WhatsApp number
         call_to_action: "Message us", // Call to action
         position: "right", // Position may be 'right' or 'left'
         pre_filled_message: "Thank you for your message! We will get back to yo", // WhatsApp pre-filled message
