--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <span>2022</span>
               </div>
               <div class="timeline-info">
-                <h3><span>Frontend Engineer</span><small> <Symplicity> </h3>
+                <h3><span>Frontend Engineer</span><small> Symplicity </h3>
                 <p>Working as a Front End Engineer II on Several projects for universities
                    as Advocate, CSM, and participating in story creation / Angular 12+,
                    TypeScript, Scss, HTML5, Gitlab.</p>
@@ -170,7 +170,7 @@
                 <span>Project</span>
               </div>
               <div class="timeline-info">
-                <h3><span>FullStack Web Developer</span><small> <Park Street> </small></h3>
+                <h3><span>FullStack Web Developer</span><small> Park Street </small></h3>
                 <p>Working as a Full Stack Web Developer for PS projects for direct client's
                   stores or PS own projects such as Cockpit and Navigator. PHP/Laravel and Angular</p>
               </div>
@@ -181,7 +181,7 @@
                 <span>2021</span>
               </div>
               <div class="timeline-info">
-                <h3><span>FullStack Web Developer</span><small> <Ingressolive> </small></h3>
+                <h3><span>FullStack Web Developer</span><small> Ingressolive </small></h3>
                 <p>Determined coding requirements for site creation, including e-
                   commerce capability, security, and specialized scripts.
                   Designed, implemented, and monitored web pages, plugins, and
@@ -194,7 +194,7 @@
                 <span>2021</span>
               </div>
               <div class="timeline-info">
-                <h3><span>FullStack Developer</span><small> <Easyjur> </small></h3>
+                <h3><span>FullStack Developer</span><small> Easyjur </small></h3>
                 <p>Determined coding requirements for site creation, including e-commerce capability, security, and
                   specialized scripts.
                   PHP - AJAX / MYSQL / Google Cloud Platform
@@ -207,7 +207,7 @@
                 <span>2020</span>
               </div>
               <div class="timeline-info">
-                <h3><span>Web Developer</span><small> <Xvision> </small></h3>
+                <h3><span>Web Developer</span><small> Xvision </small></h3>
                 <p>
                   Developed functional digital design concepts across various platforms to strengthen company brand and
                   identity.
@@ -221,7 +221,7 @@
                 <span>2019</span>
               </div>
               <div class="timeline-info">
-                <h3><span>Junior Web Developer<small><Turnkey Tracking Company></small></h3>
+                <h3><span>Junior Web Developer<small>Turnkey Tracking Company</small></h3>
                 <p>Designed, implemented, and monitored web pages, plugins, and functionality for continuous
                   improvement. React js/ PHP</p>
               </div>
@@ -232,7 +232,7 @@
                 <span>2018</span>
               </div>
               <div class="timeline-info">
-                <h3><span>Junior Software Developer Intern<small><Tunisian Banking Company></small></h3>
+                <h3><span>Junior Software Developer Intern<small>Tunisian Banking Company</small></h3>
                 <p>Taking an active role in structuring our single-page applications to make them easy to maintain and
                   to ensure they are
                   highly modularized. MySQL / PHP</p>
