--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
             <div class="item">
               <div class="project-info">
                 <img src="images/project/project-image01.png" class="img-fluid" alt="project image">
+                <p>test</p>
               </div>
             </div>
 
@@ -158,7 +159,7 @@
                 <span>2022</span>
               </div>
               <div class="timeline-info">
-                <h3><span>Frontend Engineer</span><small> Symplicity </h3>
+                <h3><span>Frontend Engineer</span><small> Symplicity </small></h3>
                 <p>Working as a Front End Engineer II on Several projects for universities
                    as Advocate, CSM, and participating in story creation / Angular 12+,
                    TypeScript, Scss, HTML5, Gitlab.</p>
