--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               and web development.</p>
 
             <div class="custom-btn-group mt-4">
-              <a href="images/undraw/aziz-mzoughi.pdf" target="_blank" class="btn mr-lg-2 custom-btn"><i
+              <a href="resume/aziz-mzoughi.pdf" target="_blank" class="btn mr-lg-2 custom-btn"><i
                   class='uil uil-file-alt'></i> Download Resume</a>
               <a href="#contact" class="btn custom-btn custom-btn-bg custom-btn-link">Get a free quote</a>
             </div>
@@ -152,7 +152,20 @@
     <div class="container">
         <h2 class="mb-5 text-center">Experiences</h2>
         <div class="d-flex justify-content-center">
-          <div class="timeline">            
+          <div class="timeline">
+            <div class="timeline-wrapper">
+              <div class="timeline-yr">
+                <span>2024</span>
+              </div>
+              <div class="timeline-info">
+                <h3><span>Frontend Engineer</span><small> Natixis </small></h3>
+                <p>Implementing new features and updates using Angular and JavaScript to enhance user experience.
+                  Leading Angular version migrations for various projects to ensure optimal performance and stability.
+                  Promoting robust unit testing practices to ensure code quality and reliability/ Angular 9+,
+                  TypeScript, Scss, HTML5, Bitbucket.</p>
+              </div>
+            </div>
+
             <div class="timeline-wrapper">
               <div class="timeline-yr">
                 <span>2022</span>
@@ -161,7 +174,7 @@
                 <h3><span>Frontend Engineer</span><small> Symplicity </small></h3>
                 <p>Working as a Front End Engineer II on Several projects for universities
                    as Advocate, CSM, and participating in story creation / Angular 12+,
-                   TypeScript, Scss, HTML5, Gitlab.</p>
+                   TypeScript, Scss, HTML5, Accessibility, Gitlab.</p>
               </div>
             </div>
             
@@ -178,7 +191,7 @@
 
             <div class="timeline-wrapper">
               <div class="timeline-yr">
-                <span>2021</span>
+                <span>Project</span>
               </div>
               <div class="timeline-info">
                 <h3><span>FullStack Web Developer</span><small> Ingressolive </small></h3>
@@ -204,24 +217,10 @@
 
             <div class="timeline-wrapper">
               <div class="timeline-yr">
-                <span>2020</span>
-              </div>
-              <div class="timeline-info">
-                <h3><span>Web Developer</span><small> Xvision </small></h3>
-                <p>
-                  Developed functional digital design concepts across various platforms to strengthen company brand and
-                  identity.
-                  Laravel / Angular 8
-                </p>
-              </div>
-            </div>
-
-            <div class="timeline-wrapper">
-              <div class="timeline-yr">
                 <span>2019</span>
               </div>
               <div class="timeline-info">
-                <h3><span>Junior Web Developer<small>Turnkey Tracking Company</small></h3>
+                <h3><span>Web Developer Intern<small>Turnkey Tracking Company</small></h3>
                 <p>Designed, implemented, and monitored web pages, plugins, and functionality for continuous
                   improvement. React js/ PHP</p>
               </div>
@@ -232,7 +231,7 @@
                 <span>2018</span>
               </div>
               <div class="timeline-info">
-                <h3><span>Junior Software Developer Intern<small>Tunisian Banking Company</small></h3>
+                <h3><span>Software Developer Intern<small>Tunisian Banking Company</small></h3>
                 <p>Taking an active role in structuring our single-page applications to make them easy to maintain and
                   to ensure they are
                   highly modularized. MySQL / PHP</p>
@@ -262,15 +261,13 @@
           <div class="contact-info d-flex justify-content-between align-items-center py-4 px-lg-5">
             <div class="contact-info-item">
               <h3 class="mb-3 text-white">Let's talk</h3>
-              <p class="footer-text mb-0">+55 34 997653456</p>
+              <p class="footer-text mb-0">+351 935 803 631</p>
               <p><a href="mailto:mzoughiaziz@techie.com">mzoughiaziz@techie.com</a></p>
             </div>
 
             <ul class="social-links">
               <li><a href="https://www.instagram.com/mzoughi_aziz" target="_blank" class="uil uil-instagram"
                   data-toggle="tooltip" data-placement="left" title="Instagram"></a></li>
-              <li><a href="https://www.linkedin.com/in/mzoughi-aziz" target="_blank" class="uil uil-youtube"
-                  data-toggle="tooltip" data-placement="left" title="Linkedin"></a></li>
             </ul>
           </div>
         </div>
